# cplusplus_log_benchmark

./: .gitattributes  BUILD_WITH_LOCAL_DEPS.md  CMakeLists.txt  COMPLETE_WORKFLOW.md  FIX_SUMMARY.md  LICENSE  PROJECT_README.md  VISION_TEST_WORKFLOW.md  _deps.7z  benchmark_chart.html  build.bat  echarts_data.js  gen_echarts_data.py  run_benchmark.sh
gbenchmark/: VISION_SCENARIO_README.md  vision_gbenchmark.h  vision_log_msg.cpp  vision_log_msg.h
gbenchmark/cpp/easyloggingpp/: gbenchmark_easyloggingpp.cpp
gbenchmark/cpp/vision_easyloggingpp/: vision_easyloggingpp_benchmark.cpp
gbenchmark/cpp/vision_fmtlog_block/: vision_fmtlog_block_benchmark.cpp
gbenchmark/cpp/vision_fmtlog_drop/: vision_fmtlog_drop_benchmark.cpp
gbenchmark/cpp/vision_glog/: vision_glog_benchmark.cpp
gbenchmark/cpp/vision_haclog/: vision_haclog_benchmark.cpp
gbenchmark/cpp/vision_loguru/: vision_loguru_benchmark.cpp
gbenchmark/cpp/vision_quill_block/: vision_quill_block_benchmark.cpp
gbenchmark/cpp/vision_quill_drop/: vision_quill_drop_benchmark.cpp
gbenchmark/cpp/vision_spdlog/: vision_spdlog_benchmark.cpp
gbenchmark/cpp/vision_spdlog_async/: vision_spdlog_async_benchmark.cpp
gen_vision_data/: gen_vision_data.cpp
logs/: log.txt
report/benchmark_20260211/: benchmark_easyloggingpp.txt  benchmark_fmtlog_block.txt  benchmark_fmtlog_drop.txt  benchmark_glog.txt  benchmark_haclog.txt  benchmark_loguru.txt  benchmark_quill_bounded_blocking.txt  benchmark_quill_bounded_dropping.txt  benchmark_spdlog_async.txt  benchmark_spdlog_sync.txt  benchmark_vision_easyloggingpp.txt  benchmark_vision_fmtlog_block.txt  benchmark_vision_fmtlog_drop.txt  benchmark_vision_glog.txt  benchmark_vision_haclog.txt  benchmark_vision_loguru.txt  benchmark_vision_quill_block.txt  benchmark_vision_quill_drop.txt  benchmark_vision_spdlog.txt  benchmark_vision_spdlog_async.txt
report/new_benchmark/: benchmark_fmtlog_block.txt  benchmark_fmtlog_drop.txt  benchmark_glog.txt  benchmark_haclog.txt  benchmark_loguru.txt  benchmark_quill_bounded_blocking.txt  benchmark_spdlog_async.txt  benchmark_spdlog_sync.txt  benchmark_vision_fmtlog_block.txt  benchmark_vision_fmtlog_drop.txt  benchmark_vision_glog.txt  benchmark_vision_quill_drop.txt  benchmark_vision_spdlog.txt  benchmark_vision_spdlog_async.txt
test/: benchmark_chart-1.html  echarts_data.js
